crates/sith_python_parser/src/snapshots/python_parser__string__tests__bell_alias.snap
---
source: crates/sith_python_parser/src/string.rs
expression: suite
---
[
    Expr(
        ExprStmt {
            range: 0..9,
            value: StringLiteral(
                StringLiteralExpr {
                    range: 0..9,
                    value: StringLiteralValue {
                        inner: Single(
                            StringLiteral {
                                range: 0..9,
                                value: "\u{7}",
                                flags: StringLiteralFlags {
                                    prefix: Empty,
                                    triple_quoted: false,
                                },
                            },
                        ),
                    },
                },
            ),
        },
    ),
]
