crates/sith_python_parser/src/snapshots/python_parser__string__tests__character_tabulation_with_justification_alias.snap
---
source: crates/sith_python_parser/src/string.rs
expression: suite
---
[
    Expr(
        ExprStmt {
            range: 0..45,
            value: StringLiteral(
                StringLiteralExpr {
                    range: 0..45,
                    value: StringLiteralValue {
                        inner: Single(
                            StringLiteral {
                                range: 0..45,
                                value: "\u{89}",
                                flags: StringLiteralFlags {
                                    prefix: Empty,
                                    triple_quoted: false,
                                },
                            },
                        ),
                    },
                },
            ),
        },
    ),
]
