crates/sith_python_parser/src/snapshots/python_parser__string__tests__fstring_parse_self_documenting_base_more.snap
---
source: crates/sith_python_parser/src/string.rs
expression: suite
---
[
    Expr(
        ExprStmt {
            range: 0..38,
            value: FString(
                FStringExpr {
                    range: 0..38,
                    value: FStringValue {
                        inner: Single(
                            FString(
                                FString {
                                    range: 0..38,
                                    elements: [
                                        Literal(
                                            FStringLiteralElement {
                                                range: 2..6,
                                                value: "mix ",
                                            },
                                        ),
                                        Expression(
                                            FStringExpressionElement {
                                                range: 6..13,
                                                expression: Name(
                                                    NameExpr {
                                                        range: 7..11,
                                                        id: Name("user"),
                                                        ctx: Load,
                                                    },
                                                ),
                                                debug_text: Some(
                                                    DebugText {
                                                        leading: "",
                                                        trailing: "=",
                                                    },
                                                ),
                                                conversion: None,
                                                format_spec: None,
                                            },
                                        ),
                                        Literal(
                                            FStringLiteralElement {
                                                range: 13..28,
                                                value: " with text and ",
                                            },
                                        ),
                                        Expression(
                                            FStringExpressionElement {
                                                range: 28..37,
                                                expression: Name(
                                                    NameExpr {
                                                        range: 29..35,
                                                        id: Name("second"),
                                                        ctx: Load,
                                                    },
                                                ),
                                                debug_text: Some(
                                                    DebugText {
                                                        leading: "",
                                                        trailing: "=",
                                                    },
                                                ),
                                                conversion: None,
                                                format_spec: None,
                                            },
                                        ),
                                    ],
                                    flags: FStringFlags {
                                        prefix: Regular,
                                        triple_quoted: false,
                                    },
                                },
                            ),
                        ),
                    },
                },
            ),
        },
    ),
]
